# stock_pattern_classifier_deep_learning

./: .gitignore  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  claude.md  pyproject.toml  requirements.txt  run_data_manager.sh  test_dependencies.py  test_gpu_augmentation.py  test_hpo_integration.py  test_streamlit_ui.py  test_training_gui.py
scripts/: apply_hierarchical_clustering.py  clustering_config.py  example_hierarchical_clustering.py  find_optimal_clusters.py
src/config/: __init__.py  config.py
src/data/: __init__.py  binance_client.py  data_fetcher.py  metadata_manager.py  utils.py
src/evaluation/: __init__.py  clustering_metrics.py  confidence_calibration.py  confidence_scoring.py  evaluation_report.py  stage1_metrics.py  statistical_tests.py
src/features/: __init__.py  feature_engineering.py  shape_features.py
src/models/: __init__.py  causal_conv.py  encoder.py  encoders.py  fusion.py  projection.py  ucl_tsc_model.py
src/optimization/: __init__.py  config_manager.py  objective.py  optimizer.py  trial_handler.py
src/preprocessing/: batch_sampler.py  data_cleaning.py  data_splitting.py  diversity_logger.py  hierarchical_clustering.py  normalization.py  segmentation.py
src/training/: __init__.py  augmentation.py  losses.py  trainer.py
src/ui/: README.md  app.py
src/ui/components/: __init__.py  data_loader.py
src/ui/pages/: 01_ohlcv_data_download.py  02_ohlcv_data_manage.py  03_ohlcv_data_validation.py  10_features_visualization.py  11_indicators_visualization.py  14_hyperparameter_optimization.py  20_preprocess_packages.py  21_preprocess_visualization.py  34_find_optimal_shape_clusters.py  35_visualize_shape_clusters.py  40_model_validation_tests.py  50_model_training.py  51_model_comparison.py  52_model_inference.py  60_model_evaluation.py  __init__.py  configure_download.py  manage_packages.py  ohlcv_manager.py  ta_verification.py  validate_preview.py  visualize_data.py
src/validation/: __init__.py  contrastive_metrics.py  preprocessing_tests.py
src/visualization/: __init__.py  data_viz.py  tradingview_chart.py
